// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs: Component should render correctly 1`] = `
<div
  style={
    Object {
      "borderBottom": "1px solid #a6a7aa",
      "display": "flex",
      "padding": "20px 0",
    }
  }
>
  <div
    key="0"
    style={
      Object {
        "alignItems": "flex-end",
        "color": "#a6a7aa",
        "display": "flex",
        "marginRight": "14px",
      }
    }
  >
    <LinkItem
      href="#"
    >
      <Span>
        Details
      </Span>
      <H3>
        This is a page
      </H3>
    </LinkItem>
    <div
      style={
        Object {
          "color": "#a6a7aa",
          "marginLeft": "14px",
        }
      }
    >
      &gt;
    </div>
  </div>
  <div
    key="1"
    style={
      Object {
        "alignItems": "flex-end",
        "color": "#a6a7aa",
        "display": "flex",
        "marginRight": "14px",
      }
    }
  >
    <LinkItem
      href="#"
    >
      <Span>
        Details
      </Span>
      <H3>
        This is an inner page
      </H3>
    </LinkItem>
    <div
      style={
        Object {
          "color": "#a6a7aa",
          "marginLeft": "14px",
        }
      }
    >
      &gt;
    </div>
  </div>
  <div
    key="2"
    style={
      Object {
        "alignItems": "flex-end",
        "color": "#a6a7aa",
        "display": "flex",
        "marginRight": "14px",
      }
    }
  >
    <LinkItem
      href="#"
    >
      <Span>
        Details
      </Span>
      <H3>
        This is another inner page
      </H3>
    </LinkItem>
  </div>
</div>
`;

exports[`Breadcrumbs: Component should render correctly with a custom symbol 1`] = `
<div
  style={
    Object {
      "borderBottom": "1px solid #a6a7aa",
      "display": "flex",
      "padding": "20px 0",
    }
  }
>
  <div
    key="0"
    style={
      Object {
        "alignItems": "flex-end",
        "color": "#a6a7aa",
        "display": "flex",
        "marginRight": "14px",
      }
    }
  >
    <LinkItem
      href="#"
    >
      <Span>
        Details
      </Span>
      <H3>
        This is a page
      </H3>
    </LinkItem>
    <div
      style={
        Object {
          "color": "#a6a7aa",
          "marginLeft": "14px",
        }
      }
    >
      /
    </div>
  </div>
  <div
    key="1"
    style={
      Object {
        "alignItems": "flex-end",
        "color": "#a6a7aa",
        "display": "flex",
        "marginRight": "14px",
      }
    }
  >
    <LinkItem
      href="#"
    >
      <Span>
        Details
      </Span>
      <H3>
        This is an inner page
      </H3>
    </LinkItem>
    <div
      style={
        Object {
          "color": "#a6a7aa",
          "marginLeft": "14px",
        }
      }
    >
      /
    </div>
  </div>
  <div
    key="2"
    style={
      Object {
        "alignItems": "flex-end",
        "color": "#a6a7aa",
        "display": "flex",
        "marginRight": "14px",
      }
    }
  >
    <LinkItem
      href="#"
    >
      <Span>
        Details
      </Span>
      <H3>
        This is another inner page
      </H3>
    </LinkItem>
  </div>
</div>
`;

exports[`Breadcrumbs: Component should render correctly with a single child 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-end",
      "color": "#a6a7aa",
      "display": "flex",
      "marginRight": "14px",
    }
  }
>
  <LinkItem
    href="#"
  >
    <Span>
      Details
    </Span>
    <H3>
      This is a page
    </H3>
  </LinkItem>
</div>
`;
